2017-09-01  Eric Herman <eric@freesa.org>

	printf was assuming 64 bit double with a magic number constant (which
	would break on avr), now printf now uses a #define constant which is
	appropriate for the size of double

	add "eh_double_classify" functions and return the classification
	in the call to parse_float()

	replace magic numbers with declared constants
	classification constants should match math.h

	* src/eh-printf-parse-float.h: new functions, constants
	* src/eh-printf-parse-float.c: the impls
	* src/eh-printf.c: use constants, fix 32 bit bug
	* misc/pre-tidy.patch: respin

2017-08-13  Eric Herman <eric@freesa.org>

	Add eh_dprintf and eh_vdprintf:

		int eh_dprintf(int fd, const char *format, ...);
		int eh_vdprintf(int fd, const char *format, va_list ap);

	* src/eh-printf.h: headers
	* src/eh-printf.c: (mostly rename previous impl)
	* tests/test-linux-dprintf.c: test
	* Makefile.am: add test
	* .gitignore: ingnore test


2017-08-12  Eric Herman <eric@freesa.org>

	Support printing pointers

	* src/eh-printf.c: support 'p'
	* tests/test-misc.c: compare '%p' with glibc

2017-07-30  Eric Herman <eric@freesa.org>

	Prepair for fprintf, make print context more sophisticated.
	define struct eh_printf_context_s

	* src/eh-printf.h: comments
	* src/eh-sys-context-arduino.cpp: eh_printf_context_s
	* src/eh-sys-context-linux.c: eh_printf_context_s
	* src/eh-sys-context.h: eh_printf_context_s
	* tests/test-linux-write.c: eh_printf_context_s
	* tests/test-misc.c: float modifiers seem to be ignored
	* Makefile.am: eh_printf_context_s
	* misc/pre-tidy.patch: respin

2017-07-19  Eric Herman <eric@freesa.org>

	Foundation for supporting 8bit CPUs: 32bit doubles

	* src/eh-parse-float.h: make header for platform float stuff
	* src/eh-parse-float.c: impl float64_to_fields, float32_to_fields
	* src/eh-printf-private.h: include eh-parse-float.h
	* src/eh-printf.c: remove float64_to_fields
	* tests/test-parse-float.c: very basic tests
	* Makefile.am: add new files